revert Java 9-ish construct back